более безопасно переводим типы

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ FilmsTranslator.Main/bin/
 FilmsTranslator.Main/obj/
 FilmsTranslator.Proxy/bin/
 FilmsTranslator.Proxy/obj/
+FilmsTranslator.v12.suo
